--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.4",
     "firebase": "^10.9.0",
     "flowbite-react": "^0.7.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
@@ -22,7 +23,10 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
